// Copyright 2025 Cofide Limited.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package proto.connect.federation_service.v1alpha1;

import "proto/federation/v1alpha1/federation.proto";

option go_package = "github.com/cofide/cofide-api-sdk/gen/go/proto/connect/federation_service/v1alpha1";

service FederationService {
  rpc CreateFederation(CreateFederationRequest) returns (CreateFederationResponse) {}
  rpc DestroyFederation(DestroyFederationRequest) returns (DestroyFederationResponse) {}
  rpc ListFederations(ListFederationsRequest) returns (ListFederationsResponse) {}
  rpc GetFederation(GetFederationRequest) returns (GetFederationResponse) {}
}

message CreateFederationRequest {
  proto.federation.v1alpha1.Federation federation = 1;
}

message GetFederationRequest {
  string federation_id = 1;
}

message CreateFederationResponse {
  proto.federation.v1alpha1.Federation federation = 1;
}

message DestroyFederationRequest {
  optional string federation_id = 1;
}

message DestroyFederationResponse {}

message ListFederationsRequest {
  message Filter {
    optional string org_id = 1;
    optional string trust_zone_id = 2;
    optional string remote_trust_zone_id = 3;
  }
  optional Filter filter = 1;
}

message ListFederationsResponse {
  repeated proto.federation.v1alpha1.Federation federations = 1;
}

message GetFederationResponse {
  proto.federation.v1alpha1.Federation federation = 1;
}
